<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eteditUsername"
        android:hint="@string/enter_username"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eteditPassword"
        android:hint="@string/enter_password"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eteditUrl"
        android:hint="@string/enter_url"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_password"
        android:id="@+id/btneditUpdate"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn"
        android:id="@+id/btneditCancel"
        />

</LinearLayout>