<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@color/background"
                android:fontFamily="@font/galada"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/add_new_password"
                android:textColor="@color/blue"
                android:textSize="38sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/etaddUsername"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_margin="1dp"
            android:hint="@string/enter_username"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/blue"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:layout_margin="1dp"
            android:textSize="18sp"
            android:id="@+id/etaddPassword"
            android:textColorHint="@color/blue"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_url"
            android:layout_margin="1dp"
            android:textSize="18sp"
            android:id="@+id/etaddURL"
            android:textColorHint="@color/blue"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnCancelNewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:backgroundTint="@color/blue"
                android:singleLine="true"
                android:text="Cancel"
                android:textSize="15sp"
                android:textStyle="bold" />



            <Button
                android:id="@+id/btnAddNewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:backgroundTint="@color/blue"
                android:singleLine="true"
                android:text="Add"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>